# aui-cli

./: .flake8  .gitignore  LICENSE  README.md  pylintrc  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  linting.yml
src/aui_cli/: __main__.py  aui_cli.py  aui_commands.py  aui_help.py
src/aui_cli/common/: config.py  exceptions.py  services.py  version.py
src/aui_cli/groups/datasources/: _format.py  _help.py  _module.py  commands.py
src/aui_cli/groups/instances/: __init__.py  _format.py  _help.py  _module.py  commands.py
src/aui_cli/groups/measures/: _format.py  _help.py  _module.py  commands.py
src/aui_cli/groups/roles/: _format.py  _help.py  _module.py  commands.py
src/aui_cli/groups/search/: _help.py  _module.py  commands.py
src/aui_cli/groups/segments/: _format.py  _help.py  _module.py  commands.py
